test/sema/lambdas/lambda_param_type_infer_in_call_error.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:14: error: explicit type annotations are needed to infer the type of 'x'
  let f = ->(x) { x; };

  f(0);
}
